--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -5094,17 +5094,36 @@ a .panel-sub-title {
     line-height: 0.8;
   }
 }
-.pop-modal{
-  .close{
+
+.pop-modal {
+  .close {
     color: $color-black;
   }
 }
 
-button:disabled{
+button:disabled {
   cursor: default;
   opacity: 0.5;
 }
 
-.cursor-default{
+.cursor-default {
   cursor: default;
+}
+
+.popup-overlay {
+  height: 100vh;
+  overflow-y: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+body.modal-open {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
+
+html{
+  overflow-y: hidden;
 }
